--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
             "name": "jldonne",
             "email": "jldonne@gmail.com"
         }
-    ]
+    ],
+    "require": {
+        "twig/twig": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Blog\\": "src/"
+        }
+    }
 }
