--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
-    "name": "jlavidange/app",
-    "description": "projet 5 OPC",
+    "name": "donjmi/Blog mvc",
+    "description": "projet 5 Blog mvc - OPC",
+    "version": "0.1.0",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -11,6 +12,9 @@
     ],
     "require": {
         "twig/twig": "^3.0"
+    },
+    "require-dev": {
+        "tracy/tracy": "^2.7.0"
     },
     "autoload": {
         "psr-4": {
