--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "donjmi/Blog mvc",
-    "description": "projet 5 Blog mvc - OPC",
-    "version": "0.1.0",
+    "name": "donjmi/blog_mvc",
+    "description": "projet n° 5 Blog mvc - OPC",
+    "version": "0.1.3",
     "type": "project",
     "license": "MIT",
     "authors": [
