--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "swiftmailer/swiftmailer": "^6.2"
     },
     "require-dev": {
         "tracy/tracy": "^2.7.0"
